# flutter-realtime-player

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml  flutter_rust_bridge.yaml  lessons_learned.md  native_manifest.yaml  pubspec.yaml  trtp-protocol.md  your_file.rs
.cargo/: config.toml
PLANS/: auto-restart-wsc-rtp.md  playbin-support.md  refine-gstreamer-video-rendering.md  seek-error-handling.md  seek-not-working.md  wsc-rtp_gstreamer_custom_io_udp_tcp_migration.md
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_gstreamer_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/flutter_realtime_player_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  playbin_player.dart  stream_window_page.dart  trtp_seek_demo.dart  window_node.dart  wsc_rtp_player.dart  wsc_rtp_seek_demo.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig  Warnings.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
hook/: build.dart  env_utilizer.dart
ios/: flutter_gstreamer.podspec
lib/: event_widget.dart  flutter_gstreamer.dart  flutter_realtime_player.dart  main.dart  multi_player.dart  video_player.dart
lib/rust/: dart_types.dart  dart_types.freezed.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/rust/api/: simple.dart  simple.freezed.dart
lib/rust/core/: types.dart  types.freezed.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: simple.dart
lib/src/rust/core/: types.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: flutter_gstreamer.podspec
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml  build.rs
rust/src/: dart_types.rs  frb_generated.rs  lib.rs  utils.rs
rust/src/api/: simple.rs
rust/src/core/: HLS_SEEKING.md  ffi.rs  ffmpeg_private.rs  fluttersink.rs  gl.rs  mod.rs  my_glium.rs  platform.rs  session.rs  software_decoder.rs  software_renderer.rs  tsdp.rs  types.rs
rust/src/core/fluttersink/: fltexturewrapper.rs  frame.rs  gltexture.rs  imp.rs  mod.rs  platform.rs  sink.rs  types.rs  utils.rs
rust/src/core/input/: ffmpeg.rs  mod.rs  playbin.rs  trtp.rs  wsc_rtp.rs
rust/src/core/output/: flutter_pixelbuffer.rs  mod.rs
rust/src/core/session/: mod.rs  registry.rs
rust/src/core/texture/: flutter.rs  mod.rs  payload.rs
rust_builder/: pubspec.yaml
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: flutter_window.cpp
