[package]
name = "rust_lib_my_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
flutter_rust_bridge = "=2.9.0"

# irondash
irondash_texture = { git = "https://github.com/nrbnlulu/irondash.git"  }
irondash_run_loop = { git = "https://github.com/nrbnlulu/irondash.git" }
irondash_engine_context = { git = "https://github.com/nrbnlulu/irondash.git" }
irondash_dart_ffi = { git = "https://github.com/nrbnlulu/irondash.git" }

simple_logger = "2.1"
log = "0.4"
anyhow = "1.0.81"
async-trait = "0.1.77"
tokio = { version = "1", features = ["full"] }
flume = "0.11.1"
simple-log = "2.1.1"
lazy_static = "1.5.0"
# GLib (GIMP Library) dependencies
glib = "0.20.9"
glib-macros = "0.20.7"
glib-sys = "0.20.9"
gobject-sys = "0.20.9"

# GStreamer dependencies
gst = { package = "gstreamer", version = "0.23.5" }
gst-sys = { package = "gstreamer-sys", version = "0.23.5", features = ["v1_16"] }
gst-base = { package = "gstreamer-base", version = "0.23.5" }
gst-video = { package = "gstreamer-video", version = "0.23.5" }
gst-app = { package = "gstreamer-app", version = "0.23.5" }

thread_local = "1.1.8"


[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.0"
features = [
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Wdk_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Registry",
]


[target.'cfg(target_os = "linux")'.dependencies]
# GDK (GIMP Drawing Kit) dependencies
gdk = "0.17.1"
gdk-sys = "0.17.0"
gdkwayland = "0.17.0"
gdkx11 = "0.17.0"
# GTK (GIMP Toolkit) dependencies
gtk-sys = "0.17.0"



[build-dependencies]
cfg_aliases = "0.2.1"


[features]
wayland = []
