[package]
name = "flutter_realtime_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
flutter_rust_bridge = "=2.11.1"

# irondash
irondash_texture = "*"
irondash_run_loop = "*"
irondash_engine_context = "*"
irondash_dart_ffi = "*"

anyhow = "1.0.81"
lazy_static = "1.5.0"


thread_local = "1.1.8"
ffmpeg = { package="rffmpeg", git = "https://github.com/nrbnlulu/rffmpeg", branch = "master", default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }

log = "0.4"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }


[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61.0"
features = [
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Wdk_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_WindowsProgramming",
    "Win32_System_Threading",
    "Win32_System_Registry",
]


[target.'cfg(target_os = "linux")'.dependencies]
# GDK (GIMP Drawing Kit) dependencies
gdk = "0.17.1"
gdk-sys = "0.17.0"
gdkwayland = "0.17.0"
gdkx11 = "0.17.0"
# GTK (GIMP Toolkit) dependencies
gtk-sys = "0.17.0"



[build-dependencies]
cfg_aliases = "0.2.1"


[features]
wayland = []
